--- a/index.css
+++ b/index.css
@@ -13,3 +13,15 @@ header {
         text-align: center;
     }
 }
+
+main {
+    #world-map-container{
+        width: 100%;
+        padding: 0 5rem;
+        box-sizing: border-box;
+        svg {
+            width: 100%;
+            margin-top: -2.5rem;
+        }
+    }
+}
