Add click listeners to each country path and a hover effect

--- a/index.css
+++ b/index.css
@@ -12,6 +12,12 @@ header {
         font-size: 3rem;
         text-align: center;
     }
+
+    section {
+        h2 {
+            text-align: center;
+        }
+    }
 }
 
 main {
@@ -27,6 +33,10 @@ main {
                 fill: white;
                 stroke: black;
                 stroke-width: 0.5px;
+
+                &:hover{
+                    fill: rgb(238, 238, 238);
+                }
             }
         }
     }
